@@ -10,6 +10,7 @@
     + XSS (reflected) by invalid email address response;
     + XSS and LDAP injection in ad-search-result.php;
     + Restrict find_full_subnets.php to CLI;
+    + Ensure confidentiality of database password;
 
 == 1.5.0
 
